# tauri-nexus

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  package.json  tsconfig.json  vitest.config.ts
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/capabilities/: default.json
apps/app/src-tauri/crates/tauri-plugin-rpc/: Cargo.toml  README.md  build.rs
apps/app/src-tauri/crates/tauri-plugin-rpc/benches/: auth.rs  cache_bench.rs  router_bench.rs
apps/app/src-tauri/crates/tauri-plugin-rpc/permissions/: default.toml
apps/app/src-tauri/crates/tauri-plugin-rpc/permissions/autogenerated/: reference.md
apps/app/src-tauri/crates/tauri-plugin-rpc/permissions/autogenerated/commands/: delete_user.toml  list_users.toml  rpc_call.toml  rpc_call_batch.toml  rpc_procedures.toml  rpc_subscribe.toml  rpc_subscription_count.toml  rpc_unsubscribe.toml  update_user.toml
apps/app/src-tauri/crates/tauri-plugin-rpc/permissions/schemas/: schema.json
apps/app/src-tauri/crates/tauri-plugin-rpc/src/: auth.rs  batch.rs  cache.rs  config.rs  context.rs  error.rs  handler.rs  lib.rs  logging.rs  middleware.rs  plugin.rs  procedure.rs  rate_limit.rs  router.rs  schema.rs  subscription.rs  types.rs  validation.rs
apps/app/src-tauri/crates/tauri-plugin-rpc/src/auth/: config.rs  context.rs  middleware.rs  mod.rs  provider.rs  rules.rs  types.rs
apps/app/src-tauri/crates/tauri-plugin-rpc/src/cache/: config.rs  entry.rs  error.rs  metrics.rs  middleware.rs  mod.rs  pattern.rs  store.rs
apps/app/src-tauri/crates/tauri-plugin-rpc/src/logging/: config.rs  constants.rs  events.rs  lifecycle.rs  logger.rs  middleware.rs  mod.rs  redaction.rs  types.rs
apps/app/src-tauri/crates/tauri-plugin-rpc/src/plugin/: mod.rs
apps/app/src-tauri/crates/tauri-plugin-rpc/src/router/: builder.rs  context_transform.rs  core.rs  dyn_router.rs  middleware_chain.rs  mod.rs  types.rs
apps/app/src-tauri/crates/tauri-plugin-rpc/src/router/tests/: builder_tests.rs  context_tests.rs  core_tests.rs  mod.rs  (+1 more)
apps/app/src-tauri/crates/tauri-plugin-rpc/src/subscription/: backpressure.rs  config.rs  context.rs  errors.rs  event.rs  handler.rs  id.rs  lifecycle.rs  manager.rs  metrics.rs  mod.rs  publisher.rs  retry_delay.rs
apps/app/src-tauri/crates/tauri-plugin-rpc/src/tests/: config_tests.rs  error_tests.rs  handler_tests.rs  logging_tests.rs  middleware_tests.rs  mod.rs  plugin_helpers_tests.rs  procedure_tests.rs  subscription_tests.rs  validation_tests.rs
apps/app/src-tauri/crates/tauri-plugin-rpc/tests/: auth_integration.rs
apps/app/src-tauri/src/: lib.rs
apps/app/src-tauri/src/rpc/: context.rs  mod.rs  types.rs
tauri-plugin-rpc/: Cargo.toml  README.md  build.rs
tauri-plugin-rpc/guest-js/: index.ts  package.json  react.tsx  tsconfig.json
tauri-plugin-rpc/guest-js/bindings/: CreateUserInput.ts  PaginatedResponse.ts  PaginationInput.ts  SuccessResponse.ts  User.ts  index.ts
tauri-plugin-rpc/permissions/: default.toml
tauri-plugin-rpc/permissions/autogenerated/: reference.md
tauri-plugin-rpc/permissions/autogenerated/commands/: create_user.toml  get_user.toml  greet.toml
tauri-plugin-rpc/permissions/schemas/: schema.json
tauri-plugin-rpc/src/: batch.rs  cache.rs  commands.rs  config.rs  context.rs  desktop.rs  error.rs  handler.rs  lib.rs  middleware.rs  mobile.rs  plugin.rs  procedure.rs  rate_limit.rs  router.rs  schema.rs  subscription.rs  types.rs  validation.rs
tauri-plugin-rpc/src/tests/: batch_tests.rs  config_tests.rs  error_tests.rs  handler_tests.rs  middleware_tests.rs  mod.rs  subscription_tests.rs  validation_tests.rs
tauri-plugin-rpc/tests/: export_bindings.rs
zod-rs/: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
zod-rs/examples/: basic_usage.rs  complex_types.rs  serde_integration.rs
zod-rs/zod-rs/: Cargo.toml  README.md
zod-rs/zod-rs-cli/: Cargo.toml  README.md
zod-rs/zod-rs-cli/src/: config.rs  error.rs  generator.rs  lib.rs  main.rs  parser.rs  scanner.rs  watcher.rs  writer.rs
zod-rs/zod-rs-cli/tests/: integration_tests.rs  property_tests.rs
zod-rs/zod-rs-cli/tests/fixtures/: complex_types.rs  enums.rs  mixed.rs  no_zod_schema.rs  simple_struct.rs
zod-rs/zod-rs-macros/: .gitignore  Cargo.toml  README.md
zod-rs/zod-rs-macros/src/: error.rs  lib.rs
zod-rs/zod-rs-macros/src/codegen/: impl_block.rs  mod.rs
zod-rs/zod-rs-macros/src/generator/: contract.rs  mod.rs  registry.rs  traits.rs
zod-rs/zod-rs-macros/src/generator/zod/: emitter.rs  formatter.rs  mod.rs  type_mapper.rs
zod-rs/zod-rs-macros/src/ir/: metadata.rs  mod.rs  proptest.rs  schema.rs  types.rs  validation.rs
zod-rs/zod-rs-macros/src/parser/: attributes.rs  enum_parser.rs  field_parser.rs  mod.rs  serde_compat.rs  struct_parser.rs  type_parser.rs
zod-rs/zod-rs-macros/tests/: compile_fail.rs  integration_tests.rs  serde_compat_tests.rs  snapshot_tests.rs
zod-rs/zod-rs-macros/tests/compile_fail/: invalid_min_type.rs  invalid_min_type.stderr  invalid_rename_all.rs  invalid_rename_all.stderr  union_not_supported.rs  union_not_supported.stderr
zod-rs/zod-rs-macros/tests/snapshots/: snapshot_tests__all_primitives.snap  snapshot_tests__basic_struct_declaration.snap  snapshot_tests__basic_struct_schema.snap  snapshot_tests__collection_types.snap  snapshot_tests__enum_adjacent_tag.snap  snapshot_tests__enum_internal_tag.snap  snapshot_tests__field_defaults.snap  snapshot_tests__field_optional_nullable.snap  snapshot_tests__field_rename.snap  snapshot_tests__field_validations.snap  snapshot_tests__nested_struct.snap  snapshot_tests__number_validations.snap  snapshot_tests__string_validations.snap  snapshot_tests__struct_rename_all_camel.snap  snapshot_tests__struct_strict.snap  snapshot_tests__struct_with_docs.snap  snapshot_tests__tuple_struct_schema.snap  snapshot_tests__unit_enum.snap  snapshot_tests__unit_enum_declaration.snap  snapshot_tests__unit_enum_screaming_snake.snap  snapshot_tests__unit_struct_schema.snap
zod-rs/zod-rs/src/: export.rs  lib.rs  registry.rs  traits.rs  types.rs
zod-rs/zod-rs/src/integrations/: mod.rs  tauri.rs
(+121 files in other folders)
