[package]
name = "tauri-plugin-rpc"
version = "0.1.0"
edition = "2021"
description = "Type-safe RPC plugin for Tauri with automatic TypeScript generation"
license = "MIT"
links = "tauri-plugin-rpc"

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", features = ["serde-compat"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
schemars = "0.8"
