[package]
name = "tauri-plugin-rpc"
version = "0.1.0"
edition = "2021"
description = "ORPC-style type-safe RPC plugin for Tauri"
license = "MIT"
links = "tauri-plugin-rpc"

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
