[package]
name = "tauri-plugin-rpc"
version = "0.1.0"
edition = "2024"
description = "ORPC-style type-safe RPC plugin for Tauri"
license = "MIT"
links = "tauri-plugin-rpc"

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt"] }
uuid = { version = "1", features = ["v7", "serde"] }
tracing = "0.1"
regex = "1"
futures = "0.3"
lru = "0.12"

[dev-dependencies]
proptest = "1.4"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
