[package]
name = "zod-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Runtime traits and types for generating TypeScript Zod schemas from Rust types"
readme = "README.md"
keywords = ["zod", "typescript", "schema", "codegen", "derive"]
categories = ["development-tools", "web-programming"]

[features]
default = ["std", "serde-compat"]

# Core features
std = []
serde-compat = ["dep:serde"]

# Optional type support
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]

# Framework integrations (optional)
tauri = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# Re-export the derive macro
zod-rs-macros = { path = "../zod-rs-macros", optional = true }

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
