[package]
name = "tauri-plugin-rpc"
version.workspace = true
edition.workspace = true
description = "ORPC-style type-safe RPC plugin for Tauri"
license = "MIT"
links = "tauri-plugin-rpc"

[dependencies]
tauri = { workspace = true, features = [] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
regex.workspace = true
futures.workspace = true
lru.workspace = true
dashmap.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "auth"
harness = false

[[bench]]
name = "router_bench"
harness = false

[build-dependencies]
tauri-plugin.workspace = true
